--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cache-manager": "^5.7.6",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.4.5",
     "ioredis": "^5.4.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
@@ -81,5 +82,9 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "engines": {
+    "node": "^22.5.1"
+  },
+  "engineStrict": true
 }
