--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint --cache \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -24,27 +23,20 @@
     "@grpc/grpc-js": "^1.11.2",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
-    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
-    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/schedule": "^4.1.0",
-    "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.1",
     "@swc/cli": "^0.4.0",
     "@swc/core": "^1.7.24",
     "@swc/jest": "^0.2.36",
     "bcryptjs": "^2.4.3",
-    "cache-manager": "^5.7.6",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
     "dotenv": "^16.4.5",
     "google-protobuf": "^3.21.4",
-    "ioredis": "^5.4.1",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
@@ -55,7 +47,6 @@
     "@nestjs/cli": "^10.4.5",
     "@nestjs/schematics": "^10.1.4",
     "@nestjs/testing": "^10.4.1",
-    "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/google-protobuf": "^3.15.12",
@@ -64,9 +55,6 @@
     "@types/supertest": "^6.0.2",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
     "grpc-tools": "^1.12.4",
     "jest": "^29.7.0",
     "nestjs-proto-gen-ts": "^1.0.21",
@@ -101,5 +89,6 @@
   "engines": {
     "node": "^22.5.1"
   },
-  "engineStrict": true
+  "engineStrict": true,
+  "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
 }
