--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@nestjs/common": "^10.4.1",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.1",
+    "@nestjs/event-emitter": "^2.0.4",
     "@nestjs/microservices": "^10.4.1",
     "@nestjs/platform-express": "^10.4.1",
+    "@nestjs/platform-ws": "^10.4.1",
     "@nestjs/schedule": "^4.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.1",
@@ -41,7 +43,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "typeorm-naming-strategies": "^4.1.0"
+    "typeorm-naming-strategies": "^4.1.0",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.5",
@@ -53,6 +56,7 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^22.5.4",
     "@types/supertest": "^6.0.2",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
     "grpc-tools": "^1.12.4",
