--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,20 @@
+NODE_ENV=development
+
 DB_PORT=5432
 DB_HOST=account-service-db
 DB_PASSWORD=test
 DB_NAME=account_db
 DB_USER=test
-PORT=3000
-NODE_ENV=development
+
+WS_PORT=3200
+
+HTTP_PORT=3000
+HTTP_HOST=0.0.0.0
+
+TRANSACTION_SERVICE_GRPC_HOST=0.0.0.0
+TRANSACTION_SERVICE_GRPC_PORT=3100
+TRANSACTION_SERVICE_GRPC_URL=${TRANSACTION_SERVICE_GRPC_HOST}:${TRANSACTION_SERVICE_GRPC_PORT}
+
+ACCOUNT_SERVICE_GRPC_HOST=account-service
+ACCOUNT_SERVICE_GRPC_PORT=3000
+ACCOUNT_SERVICE_GRPC_URL=${ACCOUNT_SERVICE_GRPC_HOST}:${ACCOUNT_SERVICE_GRPC_PORT}
