--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "@nestjs/platform-express": "^10.4.1",
     "@nestjs/platform-ws": "^10.4.1",
     "@nestjs/schedule": "^4.1.0",
+    "@nestjs/swagger": "^7.4.0",
+    "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.1",
     "@swc/cli": "^0.4.0",
-    "@swc/core": "^1.7.24",
+    "@swc/core": "^1.7.26",
     "@swc/jest": "^0.2.36",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
@@ -44,6 +46,7 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
+    "winston": "^3.14.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
@@ -53,7 +56,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/google-protobuf": "^3.15.12",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.4",
     "@types/supertest": "^6.0.2",
     "@types/ws": "^8.5.12",
@@ -94,5 +97,5 @@
     "node": "^22.5.1"
   },
   "engineStrict": true,
-  "packageManager": "pnpm@9.3.0+sha512.ee7b93e0c2bd11409c6424f92b866f31d3ea1bef5fbe47d3c7500cdc3c9668833d2e55681ad66df5b640c61fa9dc25d546efa54d76d7f8bf54b13614ac293631"
+  "packageManager": "pnpm@9.10.0"
 }
