--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "paths": {
-      "@ebank-account/*": ["./src/*"]
+      "@/*": ["./src/*"]
     }
   }
 }
