--- a/.env.example
+++ b/.env.example
@@ -10,11 +10,15 @@ WS_PORT=3200
 
 HTTP_PORT=3000
 HTTP_HOST=0.0.0.0
+HTTP_SCHEME=http
 
 TRANSACTION_SERVICE_GRPC_HOST=0.0.0.0
 TRANSACTION_SERVICE_GRPC_PORT=3100
 TRANSACTION_SERVICE_GRPC_URL=${TRANSACTION_SERVICE_GRPC_HOST}:${TRANSACTION_SERVICE_GRPC_PORT}
 
 ACCOUNT_SERVICE_GRPC_HOST=account-service
-ACCOUNT_SERVICE_GRPC_PORT=3000
+ACCOUNT_SERVICE_GRPC_PORT=3100
 ACCOUNT_SERVICE_GRPC_URL=${ACCOUNT_SERVICE_GRPC_HOST}:${ACCOUNT_SERVICE_GRPC_PORT}
+
+SERVICE_DISCOVERY_HTTP_URL=http://service-discovery:3000
+SERVICE_DISCOVERY_HEALTHCHECK_INTERVAL=30
