--- a/Dockerfile.development
+++ b/Dockerfile.development
@@ -1,6 +1,7 @@
 FROM node:22-alpine
 WORKDIR /app
 
+RUN apk update && apk upgrade --no-cache
 RUN npm i -g pnpm
 
 COPY package.json .
@@ -10,4 +11,5 @@ RUN pnpm i --frozen-lockfile
 
 COPY . .
 
+ENV NODE_ENV=development
 ENTRYPOINT pnpm start:dev
