--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,8 +1,7 @@
 FROM node:22-alpine
 WORKDIR /app
 
-ENV PORT 3000
-
+RUN apk update && apk upgrade --no-cache
 RUN npm i -g pnpm
 
 COPY package.json .
@@ -14,4 +13,6 @@ COPY . .
 
 RUN pnpm build
 
-ENTRYPOINT pnpm start
+ENV NODE_ENV=production
+
+ENTRYPOINT pnpm start:prod
