--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "generate:grpc": "bash ./generate-protobuf.sh"
   },
   "dependencies": {
-    "@nestjs/cli": "^10.4.5",
     "@grpc/grpc-js": "^1.11.3",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
     "@nestjs/axios": "^3.0.3",
+    "@nestjs/cli": "^10.4.5",
     "@nestjs/common": "^10.4.3",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.4.3",
@@ -34,6 +34,7 @@
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
+    "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.3",
     "@swc/cli": "^0.4.0",
