--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,8 +1,10 @@
 FROM node:22-alpine
 WORKDIR /app
 
-RUN apk update && apk upgrade --no-cache
-RUN npm i -g pnpm
+RUN apk update
+RUN apk upgrade --no-cache
+RUN apk add curl
+RUN npm i -g -f pnpm
 
 COPY package.json .
 COPY pnpm-lock.yaml .
