--- a/package.json
+++ b/package.json
@@ -24,21 +24,21 @@
     "@grpc/reflection": "^1.0.4",
     "@nestjs/axios": "^3.0.3",
     "@nestjs/cli": "^10.4.5",
-    "@nestjs/common": "^10.4.3",
+    "@nestjs/common": "^10.4.4",
     "@nestjs/config": "^3.2.3",
-    "@nestjs/core": "^10.4.3",
+    "@nestjs/core": "^10.4.4",
     "@nestjs/event-emitter": "^2.0.4",
-    "@nestjs/microservices": "^10.4.3",
-    "@nestjs/platform-express": "^10.4.3",
-    "@nestjs/platform-ws": "^10.4.3",
+    "@nestjs/microservices": "^10.4.4",
+    "@nestjs/platform-express": "^10.4.4",
+    "@nestjs/platform-ws": "^10.4.4",
     "@nestjs/schedule": "^4.1.1",
     "@nestjs/swagger": "^7.4.2",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.4.3",
+    "@nestjs/websockets": "^10.4.4",
     "@swc/cli": "^0.4.0",
-    "@swc/core": "^1.7.26",
+    "@swc/core": "^1.7.28",
     "@swc/jest": "^0.2.36",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -55,17 +55,15 @@
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.1.4",
-    "@nestjs/testing": "^10.4.3",
+    "@nestjs/testing": "^10.4.4",
     "@types/bcryptjs": "^2.4.6",
-    "@types/express": "^4.17.21",
+    "@types/express": "^5.0.0",
     "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.13",
-    "@types/node": "^22.5.5",
+    "@types/node": "^22.7.4",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.12",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
     "grpc-tools": "^1.12.4",
     "jest": "^29.7.0",
     "nestjs-proto-gen-ts": "^1.0.21",
@@ -100,5 +98,6 @@
   "engines": {
     "node": "^22.5.1"
   },
-  "engineStrict": true
+  "engineStrict": true,
+  "packageManager": "pnpm@9.11.0"
 }
