--- a/.env.example
+++ b/.env.example
@@ -22,6 +22,8 @@ ACCOUNT_SERVICE_GRPC_URL=${ACCOUNT_SERVICE_GRPC_HOST}:${ACCOUNT_SERVICE_GRPC_POR
 
 SERVICE_DISCOVERY_HTTP_URL=http://service-discovery:3000
 SERVICE_DISCOVERY_HEALTHCHECK_INTERVAL=30
+SERVICE_DISCOVERY_RETRY_INTERVAL=5000
+SERVICE_DISCOVERY_REQUEST_TIMEOUT=5000
 
 MAX_CONCURRENT_TASKS=5
 
