--- a/.env.example
+++ b/.env.example
@@ -12,14 +12,6 @@ HTTP_PORT=3000
 HTTP_HOST=0.0.0.0
 HTTP_SCHEME=http
 
-TRANSACTION_SERVICE_GRPC_HOST=0.0.0.0
-TRANSACTION_SERVICE_GRPC_PORT=3100
-TRANSACTION_SERVICE_GRPC_URL=${TRANSACTION_SERVICE_GRPC_HOST}:${TRANSACTION_SERVICE_GRPC_PORT}
-
-ACCOUNT_SERVICE_GRPC_HOST=account-service
-ACCOUNT_SERVICE_GRPC_PORT=3100
-ACCOUNT_SERVICE_GRPC_URL=${ACCOUNT_SERVICE_GRPC_HOST}:${ACCOUNT_SERVICE_GRPC_PORT}
-
 SERVICE_DISCOVERY_HTTP_URL=http://service-discovery:3000
 SERVICE_DISCOVERY_HEALTHCHECK_INTERVAL=30
 SERVICE_DISCOVERY_RETRY_INTERVAL=5000
@@ -27,5 +19,7 @@ SERVICE_DISCOVERY_REQUEST_TIMEOUT=5000
 
 MAX_CONCURRENT_TASKS=5
 
+GRPC_HOST=dns:///0.0.0.0
+GRPC_PORT=3100
 GRPC_RATE_LIMIT_TTL=10000
 GRPC_RATE_LIMIT_LIMIT=5
