--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,6 @@ MAX_CONCURRENT_TASKS=5
 
 GRPC_HOST=dns:///0.0.0.0
 GRPC_PORT=3100
+GRPC_SCHEME=http
 GRPC_RATE_LIMIT_TTL=10000
 GRPC_RATE_LIMIT_LIMIT=5
