--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
-    "@nestjs/axios": "^3.1.0",
+    "@nestjs/axios": "^3.1.1",
     "@nestjs/cli": "^10.4.5",
     "@nestjs/common": "^10.4.6",
     "@nestjs/config": "^3.3.0",
@@ -32,38 +32,40 @@
     "@nestjs/platform-express": "^10.4.6",
     "@nestjs/platform-ws": "^10.4.6",
     "@nestjs/schedule": "^4.1.1",
-    "@nestjs/swagger": "^7.4.2",
+    "@nestjs/swagger": "^8.0.1",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
     "@nestjs/websockets": "^10.4.6",
-    "@swc/cli": "^0.4.0",
-    "@swc/core": "^1.7.40",
-    "@swc/jest": "^0.2.36",
+    "@swc/cli": "^0.5.0",
+    "@swc/core": "^1.7.42",
+    "@swc/jest": "^0.2.37",
+    "@willsoto/nestjs-prometheus": "^6.0.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "google-protobuf": "^3.21.4",
     "pg": "^8.13.1",
+    "prom-client": "^15.1.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
-    "uuid": "^11.0.0",
-    "winston": "^3.15.0",
+    "uuid": "^11.0.2",
+    "winston": "^3.16.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
-    "@nestjs/schematics": "^10.2.2",
+    "@nestjs/schematics": "^10.2.3",
     "@nestjs/testing": "^10.4.6",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.8.1",
+    "@types/node": "^22.8.7",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
-    "@types/ws": "^8.5.12",
+    "@types/ws": "^8.5.13",
     "grpc-tools": "^1.12.4",
     "jest": "^29.7.0",
     "nestjs-proto-gen-ts": "^1.0.21",
@@ -102,5 +104,5 @@
     "node": "^22.5.1"
   },
   "engineStrict": true,
-  "packageManager": "pnpm@9.12.2"
+  "packageManager": "pnpm@9.12.3"
 }
