--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
     "@grpc/grpc-js": "^1.12.2",
     "@grpc/proto-loader": "^0.7.13",
     "@grpc/reflection": "^1.0.4",
-    "@nestjs/axios": "^3.1.1",
-    "@nestjs/cli": "^10.4.5",
-    "@nestjs/common": "^10.4.6",
+    "@nestjs/axios": "^3.1.2",
+    "@nestjs/cli": "^10.4.7",
+    "@nestjs/common": "^10.4.7",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.6",
+    "@nestjs/core": "^10.4.7",
     "@nestjs/event-emitter": "^2.1.1",
-    "@nestjs/microservices": "^10.4.6",
-    "@nestjs/platform-express": "^10.4.6",
-    "@nestjs/platform-ws": "^10.4.6",
+    "@nestjs/microservices": "^10.4.7",
+    "@nestjs/platform-express": "^10.4.7",
+    "@nestjs/platform-ws": "^10.4.7",
     "@nestjs/schedule": "^4.1.1",
-    "@nestjs/swagger": "^8.0.1",
+    "@nestjs/swagger": "^8.0.5",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.4.6",
+    "@nestjs/websockets": "^10.4.7",
     "@swc/cli": "^0.5.0",
-    "@swc/core": "^1.7.42",
+    "@swc/core": "^1.9.2",
     "@swc/jest": "^0.2.37",
     "@willsoto/nestjs-prometheus": "^6.0.1",
     "axios": "^1.7.7",
@@ -51,18 +51,18 @@
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
     "typeorm-naming-strategies": "^4.1.0",
-    "uuid": "^11.0.2",
-    "winston": "^3.16.0",
+    "uuid": "^11.0.3",
+    "winston": "^3.17.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.2.3",
-    "@nestjs/testing": "^10.4.6",
+    "@nestjs/testing": "^10.4.7",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/google-protobuf": "^3.15.12",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22.8.7",
+    "@types/node": "^22.9.0",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
     "@types/ws": "^8.5.13",
@@ -70,13 +70,15 @@
     "jest": "^29.7.0",
     "nestjs-proto-gen-ts": "^1.0.21",
     "prettier": "^3.3.3",
+    "protoc": "^1.1.3",
     "protoc-gen-grpc": "^2.0.4",
+    "protoc-gen-js": "^3.21.2",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "ts-proto": "^2.2.5",
+    "ts-proto": "^2.2.7",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
   },
