--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "generate:grpc": "bash generate-protobuf.sh"
+    "generate:grpc": "bash generate-protobuf.sh",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.12.2",
@@ -24,22 +25,21 @@
     "@grpc/reflection": "^1.0.4",
     "@nestjs/axios": "^3.1.2",
     "@nestjs/cli": "^10.4.7",
-    "@nestjs/common": "^10.4.7",
+    "@nestjs/common": "^10.4.8",
     "@nestjs/config": "^3.3.0",
-    "@nestjs/core": "^10.4.7",
+    "@nestjs/core": "^10.4.8",
     "@nestjs/event-emitter": "^2.1.1",
-    "@nestjs/microservices": "^10.4.7",
-    "@nestjs/platform-express": "^10.4.7",
-    "@nestjs/platform-ws": "^10.4.7",
+    "@nestjs/microservices": "^10.4.8",
+    "@nestjs/platform-express": "^10.4.8",
+    "@nestjs/platform-ws": "^10.4.8",
     "@nestjs/schedule": "^4.1.1",
-    "@nestjs/swagger": "^8.0.5",
+    "@nestjs/swagger": "^8.0.7",
     "@nestjs/terminus": "^10.2.3",
     "@nestjs/throttler": "^6.2.1",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.4.7",
+    "@nestjs/websockets": "^10.4.8",
     "@swc/cli": "^0.5.0",
     "@swc/core": "^1.9.2",
-    "@swc/jest": "^0.2.37",
     "@willsoto/nestjs-prometheus": "^6.0.1",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
@@ -57,7 +57,8 @@
   },
   "devDependencies": {
     "@nestjs/schematics": "^10.2.3",
-    "@nestjs/testing": "^10.4.7",
+    "@nestjs/testing": "^10.4.8",
+    "@swc/jest": "^0.2.37",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^5.0.0",
     "@types/google-protobuf": "^3.15.12",
@@ -78,7 +79,7 @@
     "ts-jest": "^29.2.5",
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
-    "ts-proto": "^2.2.7",
+    "ts-proto": "^2.3.0",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.6.3"
   },
@@ -94,7 +95,7 @@
     "rootDir": "src",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
+      "^.+\\.(t|j)s$": ["@swc/jest"]
     },
     "collectCoverageFrom": [
       "**/*.(t|j)s"
@@ -106,5 +107,5 @@
     "node": "^22.5.1"
   },
   "engineStrict": true,
-  "packageManager": "pnpm@9.12.3"
+  "packageManager": "pnpm@9.13.2"
 }
